--- a/www/frameworks/widgets/widget.css
+++ b/www/frameworks/widgets/widget.css
@@ -21,7 +21,8 @@
     flex-direction: column;
     gap: 15px;
     color: var(--textColor);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden !important;
 
     .remove-widget-btn {
         cursor: pointer;
@@ -51,7 +52,6 @@
     background: linear-gradient(135deg, var(--darkBGColor2) 0%, var(--darkBGColor3) 100%);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 2px;
-    margin: -10px -10px 0 -10px;
     position: sticky;
     top: 0;
     z-index: 10;
